--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <text>das ist ein Test</text>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
